route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sonarqube
spec:
  to:
    kind: Service
    name: sonarqube
  port:
    targetPort: 9000
  tls:
    termination: edge
  wildcardPolicy: None
